# Ledger-L5

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  railpack.json
alembic/: env.py
alembic/versions/: 1a9b5cceff04_create_rate_cards_invoices_invoice_line_.py  2c058298fe33_add_email_delivery_columns.py  37e7838884f1_create_usage_events_table.py  5c026e80f6a8_add_stripe_checkout_session_id_and_paid_.py  6f9d5deb7b2f_create_customers_table.py  d9cbf3790ae9_add_pdf_object_key_to_invoices.py
app/: auth.py  config.py  db.py  main.py  templates.py
app/api/: entitlements.py  invoices.py  webhooks.py
app/integrations/: email.py  object_storage.py  sentinel_l7.py  stripe.py
app/models/: __init__.py  customer.py  invoice.py  invoice_line_item.py  rate_card.py  stripe_event.py  usage_event.py
app/services/: billing.py  invoice_issuance.py  invoice_pdf.py  payments.py  scheduling.py  usage_ingestion.py  usage_poller.py
app/templates/: base.html  generate_invoice.html  invoice_detail.html  invoice_pdf.html  invoices.html  login.html  usage_events.html
app/web/: auth.py  dashboard.py
docs/: ARCHITECTURE.md  USER_STORIES.md
scripts/: seed_dashboard_demo.py  seed_rate_card.py
tests/: conftest.py  factories.py  fakes.py  test_auth.py  test_billing.py  test_checkout_endpoint.py  test_customer_model.py  test_dashboard.py  test_entitlements_endpoint.py  test_harness.py  test_invoice_email.py  test_invoice_pdf.py  test_invoices_endpoint.py  test_payments.py  test_scheduling.py  test_stripe_webhook.py  test_usage_ingestion.py  test_usage_poller.py
(+46 files in other folders)
