[project]
name = "ledger-l5"
version = "0.1.0"
description = "Billing and usage-metering service for Sentinel-L7"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "boto3>=1.43.46",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "stripe>=15.3.0",
    "uvicorn[standard]>=0.51.0",
    "weasyprint>=69.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pytest>=9.1.1",
]
